# birdview

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/html/: data.js  index.html
src/: config.rs  db.rs  fs.rs  git.rs  lib.rs  logger.rs  main.rs  report.rs  server.rs  workspace.rs
src/assets/html/: index.html
src/assets/sql/: angular_stats.sql  schema.sql
src/inspectors/: angular.rs  angular_inspector.rs  e2e_test.rs  e2e_test_inspector.rs  file_inspector.rs  file_type.rs  inspector.rs  markdown.rs  markdown_inspector.rs  mod.rs  package.rs  package_json.rs  package_json_inspector.rs  test.rs  unit_test.rs  unit_test_inspector.rs  utils.rs
src/models/: mod.rs  package_json.rs
static/: index.html
static/assets/: index-9a175de2.js  index-ac5fb894.css
