[package]
name = "birdview"
version = "0.1.0"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
description = "Command line tools for project reviews"
keywords = ["angular", "cli"]
categories = ["command-line-utilities", "development-tools"]
license = "Apache-2.0"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/DenysVuika/birdview.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1.8.3"
lazy_static = "1.4.0"
serde_json = "1.0.96"
clap = { version = "4.0", features = ["derive"] }
