[package]
name = "birdview"
version = "0.4.1"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
description = "Command line tools for project reviews"
keywords = ["angular", "cli"]
categories = ["command-line-utilities", "development-tools"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/DenysVuika/birdview.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.3"
lazy_static = "1.4.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0",  features = ["derive"] }
chrono = { version = "0.4.25", features = ["serde"] }
webbrowser = "0.8.10"
git2 = "0.17.2"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.5.0"
ignore = "0.4.20"
rusqlite = { version = "0.29.0", features = ["bundled", "uuid", "chrono"] }
uuid = { version = "1.3.3", features = ["v4"] }
anyhow = "1.0"

[dev-dependencies]
assert_fs = "1.0.13"
